--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,8 @@
 VITE_APP_TITLE = 若依管理系统
 
 # 开发环境配置
-VITE_APP_ENV = 'development'
+VITE_APP_ENV = '/dev-api'
 
 # 若依管理系统/开发环境
-VITE_APP_BASE_API = '/dev-api'
+VITE_APP_BASE_API = 'http://10.0.0.158:8080'
+# VITE_APP_BASE_API = 'http://localhost:8080'
