--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,7 @@
 VITE_APP_TITLE = 若依管理系统
 
 # 开发环境配置
-VITE_APP_ENV = '/dev-api'
+VITE_APP_BASE_API = '/dev-api'
 
 # 若依管理系统/开发环境
-VITE_APP_BASE_API = 'http://10.0.0.158:8080'
-# VITE_APP_BASE_API = 'http://localhost:8080'
+VITE_BASE_PATH = 'http://10.0.0.158:8080'
