--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,11 @@
 # 页面标题
-VITE_APP_TITLE = 若依管理系统
+VITE_APP_TITLE = ztf管理系统
 
-# 生产环境配置
-VITE_APP_ENV = 'production'
+# 开发环境配置
+VITE_APP_BASE_API = '/dev-api'
 
-# 若依管理系统/生产环境
-VITE_APP_BASE_API = '/prod-api'
+# 若依管理系统/开发环境
+VITE_BASE_PATH = 'http://10.0.0.158:8080'
 
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS = gzip
