--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
 # 页面标题
-VITE_APP_TITLE = ztf管理系统测试
+VITE_APP_TITLE = 物资管理系统测试
 
 # 开发环境配置
 VITE_APP_BASE_API = '/dev-api'
 
 # 若依管理系统/开发环境
 # VITE_BASE_PATH = 'http://10.0.0.158:8080'
-# VITE_BASE_PATH = 'http://127.0.0.1:8080'
-VITE_BASE_PATH = 'http://47.108.195.148:8080'
+VITE_BASE_PATH = 'http://127.0.0.1:8080'
+# VITE_BASE_PATH = 'http://47.108.195.148:8080'
